--- a/index.css
+++ b/index.css
@@ -7,14 +7,19 @@
 :root {
     --ivory: #E6E6FA;
     --jet-black: #0A0A0A;
-    --grey: #717999;
+    --grey: #8e98c0;
+}
+
+body {
+    width: 100%;
 }
 
 .homepage {
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     background-color: var(--jet-black);
     padding: 60px;
+    position: relative;
 }
 
 nav {
@@ -26,15 +31,17 @@ nav {
 }
 
 .nav-name {
-    font-size: 2.5rem;
+    font-size: 3.5rem;
+    z-index: 10;
 }
 
 .nav-items {
     list-style: none;
     display: flex;
     gap: 70px;
-    font-size: 1.3rem;
+    font-size: 2rem;
     color: var(--grey);
+    z-index: 10;
 }
 
 .nav-item {
@@ -52,4 +59,40 @@ nav {
     border: 2px solid var(--grey);
     border-radius: 1.5rem;
     transition: 0.2s cubic-bezier(0.19, 1, 0.22, 1);
+}
+
+.bg-image {
+    position: absolute;
+    height: 100vh;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin: 0 auto;
+    z-index: 0;
+}
+
+.main-title {
+    position: absolute;
+    color: white;
+    z-index: 15;
+    font-family: 'Montserrat';
+    font-weight: 500;
+    font-size: 15rem;
+    left: 250px;
+    top: 200px;
+}
+
+.second {
+    top: 450px;
+    left: 450px;
+}
+
+.main-description {
+    color: var(--grey);
+    position: absolute;
+    font-family: 'DM Sans', sans-serif;
+    font-size: 3.5rem;
+    top: 800px;
+    left: 50%;
+    transform: translate(-50%, 0%);
 }
