--- a/index.css
+++ b/index.css
@@ -10,10 +10,6 @@
     --grey: #8e98c0;
 }
 
-body {
-    width: 100%;
-}
-
 .homepage {
     width: 100%;
     height: 100vh;
@@ -31,7 +27,7 @@ nav {
 }
 
 .nav-name {
-    font-size: 3.5rem;
+    font-size: 2.5rem;
     z-index: 10;
 }
 
@@ -39,7 +35,7 @@ nav {
     list-style: none;
     display: flex;
     gap: 70px;
-    font-size: 2rem;
+    font-size: 1.5rem;
     color: var(--grey);
     z-index: 10;
 }
@@ -71,28 +67,36 @@ nav {
     z-index: 0;
 }
 
+main {
+    background: url("assets/pattern1.png") center 85% /cover;
+    display: flex;
+    height: 100%;
+    flex-direction: column;
+    justify-content: center;
+}
+
 .main-title {
-    position: absolute;
     color: white;
     z-index: 15;
     font-family: 'Montserrat';
     font-weight: 500;
-    font-size: 15rem;
-    left: 250px;
-    top: 200px;
+    font-size: 11rem;
+}
+
+.first {
+    margin-left: 100px;
 }
 
 .second {
-    top: 450px;
-    left: 450px;
+    margin-top: -20px;
+    margin-left: 50px;
+    display: flex;
 }
+
 
 .main-description {
     color: var(--grey);
-    position: absolute;
     font-family: 'DM Sans', sans-serif;
-    font-size: 3.5rem;
-    top: 800px;
-    left: 50%;
-    transform: translate(-50%, 0%);
+    font-size: 2.5rem;
+    text-align: center;
 }
