--- a/index.css
+++ b/index.css
@@ -8,6 +8,7 @@
     --ivory: #E6E6FA;
     --jet-black: #0A0A0A;
     --grey: #8e98c0;
+    --secondary: #069DBF;
 }
 
 .homepage {
@@ -99,4 +100,38 @@ main {
     font-family: 'DM Sans', sans-serif;
     font-size: 2.5rem;
     text-align: center;
+}
+
+.scroll-indication {
+    position: absolute;
+    bottom: 50px;
+    cursor: pointer;
+    background-color: var(--ivory);
+    width: 64px;
+    height: 64px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: 0.2s;
+    offset-anchor: center;
+}
+
+.scroll-indication:hover {
+    transform: scale(1.2);
+}
+
+.landing-contact {
+    color: white;
+    position: absolute;
+    font-family: 'DM Sans';
+    background-color: var(--secondary);
+    width: 100px;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    bottom: 50px;
+    right: 80px;
 }
