--- a/index.css
+++ b/index.css
@@ -311,7 +311,13 @@ p.stack-title {
 
 @media (max-width: 520px) {
     .homepage {
-        padding: 30px;
+        padding: 10px;
+    }
+    
+    main {
+        padding-bottom: 100px;
+        background-size: 300%;
+        background-repeat: no-repeat;
     }
     .second svg {
         display: none;
