--- a/loading.css
+++ b/loading.css
@@ -25,3 +25,15 @@
     font-size: 5rem;
     font-weight: 600;
 }
+
+@media (max-width: 725px) {
+    .jittery-text {
+        font-size: 3.5rem;
+    }
+}
+
+@media (max-width: 520px) {
+    .jittery-text {
+        font-size: 2.5rem;
+    }
+}
