--- a/loading.css
+++ b/loading.css
@@ -11,12 +11,14 @@
 }
 
 .loading-container {
+    position: absolute;
     background-color: var(--jet-black);
     height: 100vh;
     width: 100vw;
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 100;
 }
 
 .jittery-text {
