--- a/index.css
+++ b/index.css
@@ -148,14 +148,39 @@ main {
     position: absolute;
     font-family: 'DM Sans';
     background-color: var(--secondary);
-    width: 100px;
-    height: 100px;
+    overflow: hidden;
+    width: 125px;
+    height: 125px;
     display: flex;
     justify-content: center;
     align-items: center;
     border-radius: 50%;
     bottom: 5%;
     left: 5%;
+    transition: 0.3s;
+    cursor: pointer;
+}
+
+.landing-contact span {
+    position: relative;
+}
+
+.landing-contact::before {
+    content: '';
+    border-radius: 50%;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    width: 0;
+    height: 0;
+    background-color: #0476D0;
+    top: var(--y);
+    left: var(--x);
+    transition: 0.5s;
+}
+
+.landing-contact:hover::before {
+    width: 400px;
+    height: 400px;
 }
 
 .skills {
@@ -322,7 +347,7 @@ p.stack-title {
         padding-bottom: 100px;
         background-size: 300%;
         background-repeat: no-repeat;
-        background-position-y: -40%;
+        background-position-y: -90%;
     }
     .second svg {
         display: none;
